--- a/join/v0.2/index.html
+++ b/join/v0.2/index.html
@@ -2,7 +2,7 @@
 <!-- Built with spec-md https://spec-md.com -->
 <html>
 <head><meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1"><title>Join</title>
+<meta name="viewport" content="width=device-width, initial-scale=1"><title>join v0.2</title>
 <style>
 :root {
   color: #333333;
@@ -1044,7 +1044,7 @@ pre[class*="language-"] {
 </head>
 <body><article>
 <header>
-<h1>Join</h1>
+<h1>join v0.2</h1>
 <section id="intro">
 <p><h2>for defining <em>supergraphs</em> which join multiple <em>subgraphs</em></h2></p>
 <table class=spec-data>
@@ -1631,7 +1631,7 @@ Written in <a href="https://spec-md.com" target="_blank">Spec Markdown</a>.</foo
 <input hidden class="spec-sidebar-toggle" type="checkbox" id="spec-sidebar-toggle" aria-hidden /><label for="spec-sidebar-toggle" aria-hidden><div class="spec-sidebar-button">&#x2630;</div></label>
 <div class="spec-sidebar" aria-hidden>
 <div class="spec-toc">
-<div class="title"><a href="#">Join</a></div>
+<div class="title"><a href="#">join v0.2</a></div>
 <ol><li id="_sidebar_1"><a href="#sec-How-to-read-this-document"><span class="spec-secid">1</span>How to read this document</a>
 <input hidden class="toggle" type="checkbox" id="_toggle_1" /><label for="_toggle_1"></label>
 <ol>
