--- a/index.html
+++ b/index.html
@@ -1060,11 +1060,12 @@ pre[class*="language-"] {
 <li><a href="#sec-Core-Schemas-v1-0"><span class="spec-secid">1.1</span>Core Schemas v1.0</a></li>
 <li><a href="#sec-link-v1-0"><span class="spec-secid">1.2</span>link v1.0</a></li>
 <li><a href="#sec-federation-v2-0"><span class="spec-secid">1.3</span>federation v2.0</a></li>
-<li><a href="#sec-join-v0-1"><span class="spec-secid">1.4</span>join v0.1</a></li>
-<li><a href="#sec-tag-v0-1"><span class="spec-secid">1.5</span>tag v0.1</a></li>
+<li><a href="#sec-join-v0-2"><span class="spec-secid">1.4</span>join v0.2</a></li>
+<li><a href="#sec-tag-v0-2"><span class="spec-secid">1.5</span>tag v0.2</a></li>
 <li><a href="#sec-inaccessible-v0-1"><span class="spec-secid">1.6</span>inaccessible v0.1</a></li>
 </ol>
 </li>
+<li><a href="#sec-All-Schemas"><span class="spec-secid">2</span>All Schemas</a></li>
 </ol>
 </nav>
 </header>
@@ -1082,18 +1083,34 @@ pre[class*="language-"] {
 <h2><span class="spec-secid" title="link to this section"><a href="#sec-federation-v2-0">1.3</a></span>federation v2.0</h2>
 <p><a href="/federation/v2.0">federation v2.0</a> provides graph composition primitives for use in subgraphs.</p>
 </section>
-<section id="sec-join-v0-1" secid="1.4">
-<h2><span class="spec-secid" title="link to this section"><a href="#sec-join-v0-1">1.4</a></span>join v0.1</h2>
-<p><a href="/join/v0.1">join v0.1</a> declaratively describes joins between types in a supergraph.</p>
+<section id="sec-join-v0-2" secid="1.4">
+<h2><span class="spec-secid" title="link to this section"><a href="#sec-join-v0-2">1.4</a></span>join v0.2</h2>
+<p><a href="/join/v0.2">join v0.2</a> declaratively describes joins between types in a supergraph.</p>
 </section>
-<section id="sec-tag-v0-1" secid="1.5">
-<h2><span class="spec-secid" title="link to this section"><a href="#sec-tag-v0-1">1.5</a></span>tag v0.1</h2>
-<p><a href="tag/v0.1">tag v0.1</a> attaches a single piece of string metadata to various GraphQL definitions (it is mainly used for contracts)</p>
+<section id="sec-tag-v0-2" secid="1.5">
+<h2><span class="spec-secid" title="link to this section"><a href="#sec-tag-v0-2">1.5</a></span>tag v0.2</h2>
+<p><a href="tag/v0.2">tag v0.2</a> attaches a single piece of string metadata to various GraphQL definitions (it is mainly used for contracts)</p>
 </section>
 <section id="sec-inaccessible-v0-1" secid="1.6">
 <h2><span class="spec-secid" title="link to this section"><a href="#sec-inaccessible-v0-1">1.6</a></span>inaccessible v0.1</h2>
 <p><a href="inaccessible/v0.1">inaccessible v0.1</a> masks fields and types from a graph&rsquo;s public API</p>
 </section>
+</section>
+<section id="sec-All-Schemas" secid="2">
+<h1><span class="spec-secid" title="link to this section"><a href="#sec-All-Schemas">2</a></span>All Schemas</h1>
+<p>All schemas and documentation in this library:</p>
+<ul>
+<li><strong><a href="/core/v0.1">core/v0.1</a></strong> (<a href="core/v0.1/core-v0.1.graphql">schema</a></li>
+<li><strong><a href="/core/v0.2">core/v0.2</a></strong> (<a href="core/v0.2/core-v0.2.graphql">schema</a></li>
+<li><strong><a href="/federation/v1.0">federation/v1.0</a></strong> (<a href="federation/v1.0/federation-v1.0.graphql">schema</a></li>
+<li><strong><a href="/federation/v2.0">federation/v2.0</a></strong> (<a href="federation/v2.0/federation-v2.0.graphql">schema</a></li>
+<li><strong><a href="/inaccessible/v0.1">inaccessible/v0.1</a></strong> (<a href="inaccessible/v0.1/inaccessible-v0.1.graphql">schema</a></li>
+<li><strong><a href="/inaccessible/v0.2">inaccessible/v0.2</a></strong> (<a href="inaccessible/v0.2/inaccessible-v0.2.graphql">schema</a></li>
+<li><strong><a href="/join/v0.1">join/v0.1</a></strong> (<a href="join/v0.1/join-v0.1.graphql">schema</a></li>
+<li><strong><a href="/join/v0.2">join/v0.2</a></strong> (<a href="join/v0.2/join-v0.2.graphql">schema</a></li>
+<li><strong><a href="/link/v1.0">link/v1.0</a></strong> (<a href="link/v1.0/link-v1.0.graphql">schema</a></li>
+<li><strong><a href="/tag/v0.1">tag/v0.1</a></strong> (<a href="tag/v0.1/tag-v0.1.graphql">schema</a></li>
+</ul>
 </section>
 </article>
 <footer>
@@ -1108,11 +1125,12 @@ Written in <a href="https://spec-md.com" target="_blank">Spec Markdown</a>.</foo
 <li id="_sidebar_1.1"><a href="#sec-Core-Schemas-v1-0"><span class="spec-secid">1.1</span>Core Schemas v1.0</a></li>
 <li id="_sidebar_1.2"><a href="#sec-link-v1-0"><span class="spec-secid">1.2</span>link v1.0</a></li>
 <li id="_sidebar_1.3"><a href="#sec-federation-v2-0"><span class="spec-secid">1.3</span>federation v2.0</a></li>
-<li id="_sidebar_1.4"><a href="#sec-join-v0-1"><span class="spec-secid">1.4</span>join v0.1</a></li>
-<li id="_sidebar_1.5"><a href="#sec-tag-v0-1"><span class="spec-secid">1.5</span>tag v0.1</a></li>
+<li id="_sidebar_1.4"><a href="#sec-join-v0-2"><span class="spec-secid">1.4</span>join v0.2</a></li>
+<li id="_sidebar_1.5"><a href="#sec-tag-v0-2"><span class="spec-secid">1.5</span>tag v0.2</a></li>
 <li id="_sidebar_1.6"><a href="#sec-inaccessible-v0-1"><span class="spec-secid">1.6</span>inaccessible v0.1</a></li>
 </ol>
 </li>
+<li id="_sidebar_2"><a href="#sec-All-Schemas"><span class="spec-secid">2</span>All Schemas</a></li>
 </ol>
 </div>
 <script>(function(){var e,t=[],n=document.querySelector('label[for="spec-sidebar-toggle"]');function o(e){e.preventDefault()}n.addEventListener("scroll",o),n.addEventListener("touchmove",o);for(var i=document.getElementsByTagName("section"),r=0;r<i.length;r++)i[r].getAttribute("secid")&&t.push(i[r]);var c=window.scrollY,l=!1;function d(n){for(var o,i=n+document.documentElement.clientHeight/4,r=t.length-1;r>=0;r--)if(t[r].offsetTop<i){o=t[r];break}var c=o&&o.getAttribute("secid");c!==e&&(e&&a(e,!1),c&&a(c,!0),e=c)}function a(e,t){document.getElementById("_sidebar_"+e).className=t?"viewing":"";for(var n=e.split(".");n.length;){var o=document.getElementById("_sidebar_toggle_"+n.join("."));o&&(o.checked=t),n.pop()}}window.addEventListener("scroll",(function(e){c=window.scrollY,l||(l=!0,window.requestAnimationFrame((function(){d(c),l=!1})))})),d(window.scrollY);})()</script>
