--- a/index.html
+++ b/index.html
@@ -1100,17 +1100,17 @@ pre[class*="language-"] {
 <h1><span class="spec-secid" title="link to this section"><a href="#sec-All-Schemas">2</a></span>All Schemas</h1>
 <p>Everything in this library:</p>
 <ul>
-<li><strong><a href="/core/v0.1">core/v0.1</a></strong> (<a href="core/v0.1/core-v0.1.graphql">📄 schema</a></li>
-<li><strong><a href="/core/v0.2">core/v0.2</a></strong> (<a href="core/v0.2/core-v0.2.graphql">📄 schema</a></li>
-<li><strong><a href="/federation/v1.0">federation/v1.0</a></strong> (<a href="federation/v1.0/federation-v1.0.graphql">📄 schema</a></li>
-<li><strong><a href="/federation/v2.0">federation/v2.0</a></strong> (<a href="federation/v2.0/federation-v2.0.graphql">📄 schema</a></li>
-<li><strong><a href="/inaccessible/v0.1">inaccessible/v0.1</a></strong> (<a href="inaccessible/v0.1/inaccessible-v0.1.graphql">📄 schema</a></li>
-<li><strong><a href="/inaccessible/v0.2">inaccessible/v0.2</a></strong> (<a href="inaccessible/v0.2/inaccessible-v0.2.graphql">📄 schema</a></li>
-<li><strong><a href="/join/v0.1">join/v0.1</a></strong> (<a href="join/v0.1/join-v0.1.graphql">📄 schema</a></li>
-<li><strong><a href="/join/v0.2">join/v0.2</a></strong> (<a href="join/v0.2/join-v0.2.graphql">📄 schema</a></li>
-<li><strong><a href="/link/v1.0">link/v1.0</a></strong> (<a href="link/v1.0/link-v1.0.graphql">📄 schema</a></li>
-<li><strong><a href="/tag/v0.1">tag/v0.1</a></strong> (<a href="tag/v0.1/tag-v0.1.graphql">📄 schema</a></li>
-<li><strong><a href="/tag/v0.2">tag/v0.2</a></strong> (<a href="tag/v0.2/tag-v0.2.graphql">📄 schema</a></li>
+<li><strong><a href="/core/v0.1">core/v0.1</a></strong> (<a href="core/v0.1/core-v0.1.graphql">📄 graphql</a>)</li>
+<li><strong><a href="/core/v0.2">core/v0.2</a></strong> (<a href="core/v0.2/core-v0.2.graphql">📄 graphql</a>)</li>
+<li><strong><a href="/federation/v1.0">federation/v1.0</a></strong> (<a href="federation/v1.0/federation-v1.0.graphql">📄 graphql</a>)</li>
+<li><strong><a href="/federation/v2.0">federation/v2.0</a></strong> (<a href="federation/v2.0/federation-v2.0.graphql">📄 graphql</a>)</li>
+<li><strong><a href="/inaccessible/v0.1">inaccessible/v0.1</a></strong> (<a href="inaccessible/v0.1/inaccessible-v0.1.graphql">📄 graphql</a>)</li>
+<li><strong><a href="/inaccessible/v0.2">inaccessible/v0.2</a></strong> (<a href="inaccessible/v0.2/inaccessible-v0.2.graphql">📄 graphql</a>)</li>
+<li><strong><a href="/join/v0.1">join/v0.1</a></strong> (<a href="join/v0.1/join-v0.1.graphql">📄 graphql</a>)</li>
+<li><strong><a href="/join/v0.2">join/v0.2</a></strong> (<a href="join/v0.2/join-v0.2.graphql">📄 graphql</a>)</li>
+<li><strong><a href="/link/v1.0">link/v1.0</a></strong> (<a href="link/v1.0/link-v1.0.graphql">📄 graphql</a>)</li>
+<li><strong><a href="/tag/v0.1">tag/v0.1</a></strong> (<a href="tag/v0.1/tag-v0.1.graphql">📄 graphql</a>)</li>
+<li><strong><a href="/tag/v0.2">tag/v0.2</a></strong> (<a href="tag/v0.2/tag-v0.2.graphql">📄 graphql</a>) </li>
 </ul>
 </section>
 </article>
