fix links, versions in new docs

--- a/link/v1.0/index.html
+++ b/link/v1.0/index.html
@@ -1053,8 +1053,8 @@ pre[class*="language-"] {
 </table>
 <link rel=stylesheet href=/apollo-light.css>
 <script type=module async defer src=/inject-logo.js></script>
-<p>This schema defines <a href="#@link"><span class="spec-call"><span data-name="@link">@link</span></span></a>, the fundamental linking directive in <a href="/core/v1.0">core schemas</a>.</p>
-<p>See the <a href="/core/v1.0">core schema spec</a> for more details on a document&rsquo;s <a href="../core/v1.0#sec-Scope">Scope</a> and how <var data-name="link">link</var> and <span class="spec-call"><span data-name="@id">@id</span></span> interact with it.</p>
+<p>This schema defines <span class="spec-call"><span data-name="@link">@link</span></span>, the fundamental linking directive in <a href="/core/v1.0">core schemas</a>.</p>
+<p>See the <a href="/core/v1.0">core schema spec</a> for more details on a document&rsquo;s <a href="../core/v1.0#sec-Scope">Scope</a> and how <span class="spec-call"><span data-name="@link">@link</span></span> and <span class="spec-call"><span data-name="@id">@id</span></span> interact with it.</p>
 </section>
 <nav class="spec-toc">
 <div class="title">Contents</div>
